# MFTShadowForge

./: README.md
MFTShadowForge/: Cargo.toml
MFTShadowForge/src/: cli.rs  main.rs  models.rs  output.rs
MFTShadowForge/src/commands/: extract.rs  mod.rs  parse.rs  play.rs
MFTShadowForge/src/mft/: attributes.rs  boot.rs  mod.rs  parser.rs  path_builder.rs  record.rs  utils.rs
MFTShadowForge/src/rules/: mod.rs  rules.rs  timestamp.rs
