[package]
name = "mft_shadow_forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
regex = "1.10"
byteorder = "1.5"
encoding_rs = "0.8"

[profile.release]
opt-level = 3          # Максимальный уровень оптимизации (по умолчанию для release)
lto = true             # Включает Link Time Optimization
codegen-units = 1      # Уменьшает количество параллельных потоков генерации кода, 
                       # что позволяет провести более глубокую оптимизацию
panic = 'abort'        # Удаляет код для развертывания стека при панике, 
                       # уменьшая размер бинарника и ускоряя его